# AgenticRag

./: .dockerignore  .env.example  .gitignore  Dockerfile  FLOW.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml  full.yaml
data/: sample.txt
data/golden/: control_floors.json  injection_corpus.jsonl  sample.jsonl  sample_corpus.jsonl
src/agrag/: __init__.py  cli.py  config.py  container.py  deps.py  promptfmt.py
src/agrag/adapters/cache/: memory.py  redis.py
src/agrag/adapters/docstore/: memory.py  redis.py
src/agrag/adapters/embedding/: bge_m3.py  hash.py
src/agrag/adapters/lexical/: bm25.py
src/agrag/agent/: aggregate.py  answer_cache.py  app.py  grader.py  graph.py  plan_exec.py  schemas.py  state.py
src/agrag/baseline/: vanilla.py
src/agrag/contracts/: __init__.py  answer.py  budget.py  chunk.py  document.py  evidence.py  parsed.py  query.py  session.py
src/agrag/eval/: calibration.py  gate.py  golden.py  harness.py  metrics.py  recall.py
src/agrag/grounding/: answer_builder.py  generator.py  verify.py
src/agrag/ingestion/: chunker.py  crossref.py  hashing.py  jobs.py  metadata.py  service.py  stages.py
src/agrag/interfaces/: __init__.py  models.py  pipeline.py  storage.py  types.py
src/agrag/reliability/: __init__.py  breaker.py  errors.py  retry.py  slots.py
src/agrag/retrieval/: dedupe.py  hybrid.py  rrf.py  selfquery.py
src/agrag/security/: __init__.py  output_filter.py  pii.py  sanitize.py
src/agrag/serving/: app.py  ops.py
src/agrag/tools/: sandbox.py
(+17 files in other folders)
